--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+
+
 body {
     margin-top: 50%;
     margin-right: 0px;
     margin-left: 0px;
     margin-bottom: 50%;
+    font-family: "Open Sans", sans-serif;
 }
+
 .bg-img {
-    background-image: url(images/IMG_20210707_095639_692.jpg);
+    background-image: url("images/jscounterbg.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
-    padding-top: 21px;
+    padding-top: 10px;
     width: 100%;
     height: 418px;
     display: flex;
@@ -28,25 +33,31 @@ body {
     align-items: center;
     align-content: center;
     box-shadow: 3px 5px 10px black;
-    padding: 40px 30px 38px 30px;
+    padding: 47px 30px 38px 30px;
 }
 .counter-title {
     color: rgb(245, 246, 241);    margin: 0px;   font-size: 1.3rem;
-    font-family: -webkit-pictograph;
     font-weight: bolder;
 }
 #current-count {
-    color: rgb(2,128,2);     font-size: 75px;     font-family: -webkit-pictograph;
+    color: rgb(2,128,2);     
+    font-size: 75px; 
     margin: 0px; 
 }
 #lower-count, #add-count {
-    background-color: rgb(12, 44, 83); color: rgb(245, 246, 241);
+    background-color: rgb(12, 44, 83); 
+    color: rgb(245, 246, 241);
     margin-bottom: 5px;
     border: 0px;
     border-radius: 3px;
     padding: 6px;
     font-size: 9px;
-    box-shadow: 3px 4px 10px black;
+    box-shadow: 3px 4px 10px rgb(0, 0, 0);
+    cursor: pointer;
+}
+.counter-container > i {
+    cursor: pointer;
+    margin: 10px;
 }
 @media (min-width: 600px) {
         body {
@@ -70,7 +81,7 @@ body {
         margin-top: 15%;
     }
     .counter-container {
-        height: 75%;     padding: 27px 67px 42px 67px;
+        height: 75%;     padding: 46px 67px 42px 67px;
     }
     .counter-title {
         font-size: 2.3rem;
